[tool.poetry]
name = "youtube-saver-t-bot"
version = "0.1.0"
description = ""
authors = ["Максим Курдюмов <dfrozzze@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 135
indent-width = 4
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "I",
]
ignore = ["F401", "E712"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "seed_data",
]

[tool.ruff.pydocstyle]
convention = "google"


[tool.mypy]
files = ["src/"]
follow_imports = "skip"
python_version = "3.11"
strict_optional = false

ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_untyped_decorators = false

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
unknown_option = true